--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
         "@headlessui/react": "^1.2.0",
         "@testing-library/react": "^11.2.6",
         "axios": "^0.21.1",
+        "lodash": "^4.17.21",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
+        "react-confetti": "^6.0.1",
         "react-dom": "^17.0.2",
+        "react-fade-in": "^2.0.1",
         "react-icons": "^4.2.0",
+        "react-loading-skeleton": "^2.2.0",
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "react-use": "^17.2.4",
-        "react-confetti": "^6.0.1",
-        "react-fade-in": "^2.0.1",
-        "react-loading-skeleton": "^2.2.0",
         "redux": "^4.1.0",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0"
